alert in attempt test removed and overflow fixed and custom no scroll bar

--- a/css/attemptTest.css
+++ b/css/attemptTest.css
@@ -2,15 +2,15 @@
 *{
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
+
+}
+.testSlideshow{
   overflow: hidden;
 }
-
 
 body{
   background-color: cadetblue;
 
-  overflow: hidden;
 }
 
 /* .border{
