--- a/css/resultTest.css
+++ b/css/resultTest.css
@@ -1,5 +1,13 @@
 body{
   background-color:cadetblue;
+  -ms-overflow-style: none; /* for Internet Explorer, Edge */
+  scrollbar-width: none; /* for Firefox */
+  overflow-y: scroll; 
+  }
+
+
+body::-webkit-scrollbar {
+    display: none; /* for Chrome, Safari, and Opera */
 }
 label {
     margin: 10px;
